k8_Manifests/backend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: workshop
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      name: backend-pod
      namespace: workshop
      labels:
        app: backend
    spec:
      imagePullSecrets:
      - name: ecr-registry-secret
      containers:
      - name: my-backend-container
        image: public.ecr.aws/e9y4v9g0/3-tier-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3500
        resources:
          requests:
            cpu: 25m
            memory: 32Mi
          limits:
            cpu: 50m
            memory: 64Mi
        livenessProbe:
          httpGet:
            path: /ok
            port: 3500
          initialDelaySeconds: 20
          periodSeconds: 15
          timeoutSeconds: 5   
          failureThreshold: 3
        readinessProbe: # it checks if the container is ready to serve traffic
          httpGet:
            path: /ok
            port: 3500
          initialDelaySeconds: 30 # it waits for 30 seconds after the container starts before performing the first readiness check
          periodSeconds: 15  # it checks every 15 seconds
          successThreshold: 1 # if the container passes 1 consecutive readiness check, it is considered ready to serve traffic
