k8_Manifests/database_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-deployment
  namespace: workshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: database-container
        image: mongo:4.4.6    
        command:
          - "numactl"
          - "--interleave=all"
          - "mongod"
          - "--wiredTigerCacheSizeGB"
          - "0.1"
          - "--bind_ip"
          - "0.0.0.0"
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-volume
          mountPath: /data/db    
      volumes:
        - name: mongo-volume
          persistentVolumeClaim:
            claimName: mongo-pvc
