k8_Manifests/database_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-svc
  namespace: workshop
spec:
  selector:
    app: mongodb
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
