k8_Manifests/frontend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: workshop
spec:
  selector:
    app: frontend
  ports:
  - port: 3000
    protocol: TCP
